--- a/OtoTamir.WEBUI/Views/_ViewImports.cshtml
+++ b/OtoTamir.WEBUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using OtoTamir.WEBUI
 @using OtoTamir.WEBUI.Models
+@using OtoTamir.CORE.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
