added admin panel, CreateMechanic, login

--- a/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,11 @@
-﻿<!doctype html>
+﻿@inject UserManager<Mechanic> UserManager
+@{
+    
+    var user = await UserManager.GetUserAsync(User);
+    
+}
+
+<!doctype html>
 <html lang="en">
 <!--begin::Head-->
 <head>
@@ -187,20 +194,18 @@
                     <!--begin::User Menu Dropdown-->
                     <li class="nav-item dropdown user-menu">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <img  src="~/assets/img/user2-160x160.jpg"
-                                 class="user-image rounded-circle shadow"
-                                 alt="User Image" />
-                            <span class="d-none d-md-inline">Alexander Pierce</span>
+                            <img src="~/assets/img/@user.Image"
+                                 class="user-image rounded-circle shadow" />
+                            <span class="d-none d-md-inline">@User.Identity.Name</span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end">
                             <!--begin::User Image-->
                             <li class="user-header text-bg-primary">
-                                <img  src="~/assets/img/user2-160x160.jpg"
-                                     class="rounded-circle shadow"
-                                     alt="User Image" />
+                                <img src="~/assets/img/@user.Image"
+                                     class="user-image rounded-circle shadow"  />
                                 <p>
-                                    Alexander Pierce - Web Developer
-                                    <small>Member since Nov. 2023</small>
+                                    @User.Identity.Name - @user.Skills
+                                    <small>@user.CreatedDate</small>
                                 </p>
                             </li>
                             <!--end::User Image-->
@@ -218,7 +223,7 @@
                             <!--begin::Menu Footer-->
                             <li class="user-footer">
                                 <a href="#" class="btn btn-default btn-flat">Profile</a>
-                                <a href="#" class="btn btn-default btn-flat float-end">Sign out</a>
+                                <a asp-controller="Account" asp-action="Logout" class="btn btn-default btn-flat float-end">Sign out</a>
                             </li>
                             <!--end::Menu Footer-->
                         </ul>
