--- a/OtoTamir.WEBUI/Views/Account/Login.cshtml
+++ b/OtoTamir.WEBUI/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model LoginViewModel
+@{
     ViewData["Title"] = "Login";
     Layout = "~/Views/Shared/_LayoutAccount.cshtml";
 }
@@ -11,13 +12,13 @@
     <div class="card">
         <div class="card-body login-card-body">
             <p class="login-box-msg">Sign in to start your session</p>
-            <form action="../index3.html" method="post">
+            <form asp-action="Login" method="post">
                 <div class="input-group mb-3">
-                    <input type="email" class="form-control" placeholder="Email" />
+                    <input asp-for="UserName" class="form-control" placeholder="Username" />
                     <div class="input-group-text"><span class="bi bi-envelope"></span></div>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="password" class="form-control" placeholder="Password" />
+                    <input asp-for="Password" class="form-control" placeholder="Password" />
                     <div class="input-group-text"><span class="bi bi-lock-fill"></span></div>
                 </div>
                 <!--begin::Row-->
