--- a/OtoTamir.WEBUI/Views/_ViewImports.cshtml
+++ b/OtoTamir.WEBUI/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using OtoTamir.WEBUI
 @using OtoTamir.WEBUI.Models
 @using OtoTamir.CORE.Entities
+@using OtoTamir.CORE.Identity
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
