--- a/OtoTamir.WEBUI/Views/Shared/Components/_ResultNavbarViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_ResultNavbarViewComponentPartial/Default.cshtml
@@ -176,7 +176,7 @@
                     <!--end::Menu Body-->
                     <!--begin::Menu Footer-->
                     <li class="user-footer">
-                        <a href="#" class="btn btn-default btn-flat">Profile</a>
+                        <a href="/account/profile" class="btn btn-default btn-flat">Profile</a>
                         <a asp-controller="Account" asp-action="Logout" class="btn btn-default btn-flat float-end">Sign out</a>
                     </li>
                     <!--end::Menu Footer-->
