--- a/OtoTamir.WEBUI/Views/Account/Login.cshtml
+++ b/OtoTamir.WEBUI/Views/Account/Login.cshtml
@@ -9,6 +9,12 @@
         <a href="/home/Index"><b>Oto</b>Tamir</a>
     </div>
     <!-- /.login-logo -->
+        @if (TempData["message"] != null)
+        {
+            <div class="alert alert-warning" role="alert">
+                @TempData["message"]
+            </div>
+        }
     <div class="card">
         <div class="card-body login-card-body">
             <p class="login-box-msg">Sign in to start your session</p>
