--- a/OtoTamir.WEBUI/Views/Home/Clients.cshtml
+++ b/OtoTamir.WEBUI/Views/Home/Clients.cshtml
@@ -13,7 +13,12 @@
         </a>
 
     </div>
-
+    @if (TempData["Message"] != null)
+    {
+        <div class="alert alert-warning" role="alert">
+            @TempData["Message"]
+        </div>
+    }
     <div class="table-responsive shadow rounded">
         <table class="table table-striped table-hover align-middle">
             <thead class="table-primary">
@@ -49,7 +54,11 @@
                             </div>
                         </td>
                         <td>
-                            <a class="btn btn-sm btn-warning" asp-action="#" asp-route-id="@item.Id">Araç Ekle</a>
+                           
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addVehicleModal-@item.Id">
+                                Araç Ekle
+                            </button>
+
                             @if (item.Vehicles.Count > 0)
                             {
                                 @foreach (var vehicles in item.Vehicles)
@@ -60,12 +69,14 @@
                             }
                         </td>
                     </tr>
+                    <div class="modal fade" id="addVehicleModal-@item.Id" tabindex="-1" aria-labelledby="addVehicleModalLabel-@item.Id" aria-hidden="true">
+                        @await Component.InvokeAsync("_CreateVehicleViewComponentPartial", item.Id)
+                    </div>
                 }
             </tbody>
         </table>
     </div>
 </div>
 <div class="modal fade" id="addClientModal" tabindex="-1" aria-labelledby="addClientModalLabel" aria-hidden="true">
-    @await Component.InvokeAsync("_ResultCreateClientViewComponentPartial")
-
+    @await Component.InvokeAsync("_CreateClientViewComponentPartial")
 </div>
