--- a/OtoTamir.WEBUI/Views/Shared/Components/_CreateVehicleViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_CreateVehicleViewComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model CreateVehicleViewModel
+﻿@model Vehicle
 @if (TempData["Message"] != null)
 {
     <div class="alert alert-warning" role="alert">
