--- a/OtoTamir.WEBUI/Views/Home/Clients.cshtml
+++ b/OtoTamir.WEBUI/Views/Home/Clients.cshtml
@@ -51,6 +51,9 @@
                             <!-- İşlemler Menüsünde -->
                             <div class="btn-group" role="group">
                                 <button class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#editClientModal-@item.Id">Düzenle</button>
+                                <div class="modal fade" id="editClientModal-@item.Id" tabindex="-1" aria-labelledby="editClientModalLabel-@item.Id" aria-hidden="true">
+                                    @await Component.InvokeAsync("_EditClientViewComponentPartial", new { client = item })
+                                </div>
                                 <a asp-action="DeleteClient" asp-asp-controller="Home" asp-route-id="@item.Id" class=" btn btn-danger">Sil</a>
                             </div>
 
