--- a/OtoTamir.WEBUI/Views/_ViewImports.cshtml
+++ b/OtoTamir.WEBUI/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using OtoTamir.WEBUI.Models
 @using OtoTamir.CORE.Entities
 @using OtoTamir.CORE.Identity
+@using OtoTamir.CORE.DTOs.Client
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
