--- a/OtoTamir.WEBUI/Views/_ViewImports.cshtml
+++ b/OtoTamir.WEBUI/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using OtoTamir.CORE.Entities
 @using OtoTamir.CORE.Identity
 @using OtoTamir.CORE.DTOs.Client
+@using OtoTamir.CORE.DTOs.Vehicle
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
