--- a/OtoTamir.WEBUI/Views/_ViewImports.cshtml
+++ b/OtoTamir.WEBUI/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using OtoTamir.CORE.Identity
 @using OtoTamir.CORE.DTOs.Client
 @using OtoTamir.CORE.DTOs.Vehicle
+@using OtoTamir.CORE.DTOs.Profile
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
