--- a/OtoTamir.WEBUI/Views/Shared/Components/_CreateVehicleViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_CreateVehicleViewComponentPartial/Default.cshtml
@@ -1,47 +1,47 @@
 ﻿@model CreateVehicleDTO
-@* @if (TempData["Message"] != null)
-{
-    <div class="alert alert-warning" role="alert">
-        @TempData["Message"]
-    </div>
-} *@
-
-<div class="modal-dialog">
+<div class="modal-dialog modal-lg">
     <div class="modal-content">
         <form asp-controller="Home" asp-action="CreateVehicle" method="post">
-            @Html.AntiForgeryToken()
             <div class="modal-header">
-                <h5 class="modal-title">Araç Ekle</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body">
-                <div class="mb-3">
-                    <label asp-for="Plate" class="form-label"></label>
-                    <input asp-for="Plate" class="form-control" />
-                    <span asp-validation-for="Plate" class="text-danger"></span>
-                </div>
 
-                <div class="mb-3">
-                    <label asp-for="Brand" class="form-label"></label>
-                    <input asp-for="Brand" class="form-control" />
-                    <span asp-validation-for="Brand" class="text-danger"></span>
-                </div>
-                <div class="mb-3">
-                    <label asp-for="Model" class="form-label"></label>
-                    <input asp-for="Model" class="form-control" />
-                    <span asp-validation-for="Model" class="text-danger"></span>
-                </div>
-                <div class="mb-3">
-                    <label asp-for="Year" class="form-label"></label>
-                    <input asp-for="Year" class="form-control" type="number" />
-                    <span asp-validation-for="Year" class="text-danger"></span>
-                </div>
-                 <input type="hidden" asp-for="ClientId" /> 
-             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Vazgeç</button>
-                <button type="submit" class="btn btn-primary">Kaydet</button>
+                <h5 class="modal-title">Yeni Müşteri Ekle</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Kapat"></button>
             </div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="card-body">
+                <div class="modal-body">
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <label asp-for="Plate" class="form-label"></label>
+                            <input asp-for="Plate" class="form-control" />
+                            <span asp-validation-for="Plate" class="text-danger"></span>
+                        </div>
+
+                        <div class="col-md-6">
+                            <label asp-for="Brand" class="form-label"></label>
+                            <input asp-for="Brand" class="form-control" />
+                            <span asp-validation-for="Brand" class="text-danger"></span>
+                        </div>
+
+                        <div class="col-md-6">
+                            <label asp-for="Model" class="form-label"></label>
+                            <input asp-for="Model" class="form-control" />
+                            <span asp-validation-for="Model" class="text-danger"></span>
+                        </div>
+
+                        <div class="col-12">
+                            <label asp-for="Year" class="form-label"></label>
+                            <textarea asp-for="Year" class="form-control"></textarea>
+                            <span asp-validation-for="Year" class="text-danger"></span>
+                        </div>
+
+                        <input type="hidden" asp-for="ClientId" />
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Vazgeç</button>
+                    <button type="submit" class="btn btn-success">Kaydet</button>
+                </div>
         </form>
     </div>
 </div>
