--- a/OtoTamir.WEBUI/Views/Shared/Components/_NavbarViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_NavbarViewComponentPartial/Default.cshtml
@@ -149,14 +149,14 @@
                 <li class="nav-item dropdown user-menu">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                         
-                        <img src="~/images/@Model.Image.Url" 
+                        <img src="~/images/@Model.ImageUrl" 
                          class="user-image rounded-circle shadow" />
                     <span class="d-none d-md-inline">@User.Identity.Name</span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end">
                     <!--begin::User Image-->
                     <li class="user-header text-bg-primary">
-                            <img src="~/images/@Model.Image.Url"
+                            <img src="~/images/@Model.ImageUrl"
                              class="user-image rounded-circle shadow" />
                         <p>
                             @User.Identity.Name - @Model.Skills
