client new key added to control being unique

--- a/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
@@ -43,8 +43,8 @@
 <body class="layout-fixed sidebar-expand-lg bg-body-tertiary">
     <!--begin::App Wrapper-->
     <div class="app-wrapper">
-        <!--begin::Header-->
-        @await Component.InvokeAsync("_NavbarViewComponentPartial") 
+        <!--begin::Header--> 
+        @*  @await Component.InvokeAsync("_NavbarViewComponentPartial")  *@   <!--admin pagede sorun var-->
         <!--end::Header-->
         <!--begin::Sidebar-->
         <aside class="app-sidebar bg-body-secondary shadow" data-bs-theme="dark">
