--- a/OtoTamir.WEBUI/Views/_ViewImports.cshtml
+++ b/OtoTamir.WEBUI/Views/_ViewImports.cshtml
@@ -2,8 +2,8 @@
 @using OtoTamir.WEBUI.Models
 @using OtoTamir.CORE.Entities
 @using OtoTamir.CORE.Identity
-@using OtoTamir.CORE.DTOs.Client
-@using OtoTamir.CORE.DTOs.Vehicle
-@using OtoTamir.CORE.DTOs.Profile
+@using OtoTamir.CORE.DTOs.ClientDTOs
+@using OtoTamir.CORE.DTOs.VehicleDTOs
+@using OtoTamir.CORE.DTOs.MechanicDTOs
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
