--- a/OtoTamir.WEBUI/Views/Shared/Components/_ChangePasswordViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_ChangePasswordViewComponentPartial/Default.cshtml
@@ -2,7 +2,7 @@
 
 
 <form asp-action="ChangePassword" asp-controller="Account" method="post">
-    <div asp-validation-summary="All" class="text-danger"></div>
+   @*  <div asp-validation-summary="All" class="text-danger"></div> *@
 
     <div class="row">
         <!-- hata mesajı gelmiyor -->
